docs/versioned_docs/version-4.2.1/api/JustifiedInfiniteGridOptions.mdx
---
custom_edit_url: null
---

<div>

</div>

**Type**: TSInterface

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|horizontal|boolean|<p>Direction of the scroll movement. (true: horizontal, false: vertical) If horizontal is false, <code>inlinePos</code> is left, <code>inlineSize</code> is width, <code>contentPos</code> is top, and <code>contentSize</code> is height. If horizontal is true, <code>inlinePos</code> is top, <code>inlineSize</code> is height, <code>contentPos</code> is left, and <code>contentSize</code> is width.  (default: false)<br /></p>|
|percentage|Array&lt;"position" \| "size"&gt; \| boolean|<p>Whether to set the css size and position of the item to %. (default: false)</p>|
|isEqualSize|boolean|<p>Indicates whether sizes of all card elements are equal to one another. If sizes of card elements to be arranged are all equal and this option is set to &quot;true&quot;, the performance of layout arrangement can be improved. (default: false)</p>|
|isConstantSize|boolean|<p>Indicates whether sizes of all card elements does not change, the performance of layout arrangement can be improved. (default: false)</p>|
|gap|number|<p>Gap used to create space around items. (default: 5)</p>|
|attributePrefix|string|<p>The prefix to use element's data attribute. (default: &quot;data-grid-&quot;)</p>|
|resizeDebounce|number|<p>Debounce time to set in the resize event. (default: 100)</p>|
|maxResizeDebounce|number|<p>Maximum time to debounce the resize event(0 is not set). (default: 0)</p>|
|autoResize|boolean|<p>Whether to move the outline to 0 when the top is empty when rendering. However, if it overflows above the top, the outline is forced to 0. (default: true) </p>|
|useFit|boolean|<p>Whether the resize method should be called automatically after a window resize event. (default: true)</p>|
|useTransform|boolean|<p>Whether to use transform property instead of using left and top css properties. </p>|
|renderOnPropertyChange|boolean|<p>Whether to automatically render through property change. </p>|
|preserveUIOnDestroy|boolean|<p>Whether to preserve the UI of the existing container or item when destroying. </p>|
|defaultDirection|"start" \| "end"|<p>The number of outlines. If the number of outlines is 0, it is calculated according to the type of grid. (default: 0) </p>|
|outlineLength|number|<p>The size of the outline. If the outline size is 0, it is calculated according to the grid type. (default: 0) </p>|
|outlineSize|number|<p>The default direction value when direction is not set in the render option. </p>|
|useRoundedSize|boolean|<p>Whether to get the size as rounded size(offsetWidth, offsetHeight). Set to true if transform is applied to the container. If false, get the size through getBoundingClientRect. (default: true)<br /></p>|
|useResizeObserver|boolean|<p>Whether to use ResizeObserver event to detect container size change when <code>autoResize</code> option is used. (default: false)</p>|
|externalItemRenderer|ItemRenderer \| null|<p>You can set the ItemRenderer directly externally. </p>|
|externalContainerManager|ContainerManager \| null|<p>You can set the ContainerManager directly externally. </p>|
|columnRange|number \| number[]|<p>The minimum and maximum number of items per line. (default: [1, 8]) </p>|
|rowRange|number \| number[]|<p>The minimum and maximum number of rows in a group, 0 is not set. (default: 0) </p>|
|sizeRange|number \| number[]|<p>The minimum and maximum size by which the item is adjusted. If it is not calculated, it may deviate from the minimum and maximum sizes. (default: [0, Infinity]) </p>|
|displayedRow|number|<p>Maximum number of rows to be counted for container size. You can hide it on the screen by setting overflow: hidden. -1 is not set. (default: -1)</p>|
|isCroppedSize|boolean|<p>Whether to crop when the row size is out of sizeRange. If set to true, this ratio can be broken. (default: false) </p>|
|container|boolean \| string \| HTMLElement|<p>The target to which the container is applied. If false, create itself, if true, create container. A string or HTMLElement specifies the target directly. (default: false) </p>|
|containerTag|string|<p>If you create a container, you can set the container's tag. (default: &quot;div&quot;) </p>|
|threshold|number|<p>The size of the scrollable area for adding the next group of items. (default: 100) </p>|
|useRecycle|boolean|<p>Whether to show only the DOM of the visible area. (default: true) </p>|
|gridConstructor|GridFunction|<p>Grid class to apply Infinite function. </p>|
|renderer|Renderer \| null|<p>class that renders the DOM. </p>|

